--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,7 +6,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1529369197664
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1529375237117
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Launcher
+main.class=controller.Launcher
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
