created slideshow re-init button func and ui (partialy)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,8 @@ excludes=
 file.reference.Owl_s_Slideshow_Editor-src=src
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
