--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 javac.debug=true
-user.properties.file=C:\\Users\\\u0421\u043e\u0432\u0430\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\\u0412590\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
